--- a/styles/home.css
+++ b/styles/home.css
@@ -35,6 +35,7 @@ ul {
     border-radius: 0.5em;
     padding: 1em;
     color: #fff;
+    text-align: center;
 }
 
 .card-body {
@@ -118,10 +119,20 @@ main {
     padding: 1em;
 }
 
+main>p {
+    color: var(--primary-color);
+    font-size: 1.5rem;
+    padding: 1em 0;
+}
+
 /* ------- block 1 ---------*/
 
 .block1 .card-body ul li::before {
     content: "✅";
+}
+
+.card-body ul>li {
+    margin-bottom: 1em;
 }
 
 .block1 .card-body img {
