--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -28,32 +28,30 @@ main .menu button {
     gap: 10px;
 }
 
-.card {
+.grid .card {
     border-radius: 10px;
     box-shadow: 0px -1px 5px var(--accent-color);
-}
-
-.card-header {
-    padding: 1rem;
-    border-bottom: 1px solid var(--accent-color);
-}
-
-.card-body {
     padding: 1rem;
     text-align: center;
 }
 
-.grid .card-body img {
+.grid h2 {
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    border-bottom: 1px solid var(--accent-color);
+}
+
+.grid .card img {
     width: 150px;
     height: auto;
     padding-bottom: 1rem;
 }
 
-.card-body ul li a {
+.grid a {
     color: var(--text-color);
 }
 
-.card-body ul li span {
+.grid p span {
     font-weight: 700;
     color: var(--prim);
 }
