--- a/chamber/styles/base-large.css
+++ b/chamber/styles/base-large.css
@@ -1,5 +1,5 @@
 /* https://coolors.co/009e60-f77f00-ffffff-000000 */
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 760px) {
 
     /*============ HEADER STYLING ==============*/
     header {
@@ -34,7 +34,7 @@
 
     /*============ FOOTER STYLING ==============*/
     footer {
-        grid-template-columns: 1fr 1fr 1fr;
+        flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
     }
