--- a/chamber/styles/directory-large.css
+++ b/chamber/styles/directory-large.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 760px) {
     main {
         padding: 5rem;
     }
@@ -17,6 +17,19 @@
         gap: 20px;
     }
 
+    .grid .card-body {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .grid .card-body img {
+        width: 100px;
+        height: auto;
+        object-fit: cover;
+    }
+
+
     .list {
         display: grid;
         grid-template-columns: 1fr;
@@ -33,9 +46,24 @@
 
     .list .card {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        padding: 1rem;
-        border: 1px solid #eee;
+        grid-template-columns: 30% 1fr;
+    }
+
+    .list .card-header {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    .list .card-body {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .list .card-body ul {
+        display: flex;
+        justify-content: space-around;
+
     }
 
     .list img {
