--- a/chamber/styles/home-large.css
+++ b/chamber/styles/home-large.css
@@ -1,9 +1,16 @@
 @media screen and (min-width: 760px) {
 
     /* ------- hero styling  --------*/
+    .hero {
+        width: 100%;
+        max-height: 600px;
+        overflow: hidden;
+    }
+
     .overlay h2 {
         color: #000;
         font-size: 3rem;
+        padding-top: 1rem 1rem 0 1rem;
     }
 
     .hero a {
@@ -24,7 +31,7 @@
 
     /* ------- .main-content styling  --------*/
     .main-content {
-        padding: 5rem;
+        padding: 0 5rem 5rem 5rem;
     }
 
     /* ------ weather-block styling -----*/
