--- a/chamber/styles/home-large.css
+++ b/chamber/styles/home-large.css
@@ -10,7 +10,7 @@
     .overlay h2 {
         color: #000;
         font-size: 3rem;
-        padding-top: 1rem 1rem 0 1rem;
+        padding: 1rem 1rem 0 1rem;
     }
 
     .hero a {
