--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -19,6 +19,10 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+h1 {
+    color: var(--secondary-color);
+}
+
 a {
     text-decoration: none;
 }
