--- a/chamber/styles/thankyou.css
+++ b/chamber/styles/thankyou.css
@@ -7,11 +7,12 @@ main {
     padding: 1rem;
 }
 
-#result h3 {
+section h2 {
     text-align: justify;
-    padding-bottom: 1rem;
+    padding: 1rem;
     margin-bottom: 1rem;
     border-bottom: 1px solid var(--accent-color);
+    font-size: 1.5rem;
 }
 
 #result p {
