--- a/project/styles/tips.css
+++ b/project/styles/tips.css
@@ -1,11 +1,4 @@
 /*============= MAIN STYLING ======================*/
-.main-header {
-    background-color: var(--accent-color1);
-    padding: var(--large-size);
-    margin-bottom: var(--large-size);
-    text-align: center;
-}
-
 .main-header h1 {
     font-size: var(--large-size);
     padding: var(--small-size);
@@ -17,16 +10,16 @@
 }
 
 .disease h2 {
+    text-align: center;
     padding-bottom: var(--small-size);
 }
 
 .stat-card {
-    padding: var(--large-size);
-    box-shadow: 1px 1px 10px #ddd;
+    text-align: center;
+    padding-bottom: var(--large-size);
 }
 
 .stat-card h3 {
-    text-align: center;
     font-size: var(--large-size);
 }
 
