--- a/project/styles/home-large.css
+++ b/project/styles/home-large.css
@@ -1,5 +1,10 @@
 @media screen and (min-width: 321px) {
 
+    .presentation,
+    .health-info-cards {
+        padding: var(--massive-size);
+    }
+
     /*============= MAIN STYLING ======================*/
     .hero {
         margin-bottom: 0px;
@@ -12,7 +17,16 @@
 
     /*------ presentation style -------*/
     .presentation {
+        grid-template-columns: 1fr 1fr;
         grid-template-areas: "image title" "image desc";
+    }
+
+    .presentation td:first-child {
+        border-right: 1px solid #ddd;
+    }
+
+    .presentation td {
+        border-bottom: 1px solid #ddd;
     }
 
     .health-info-cards {
@@ -22,5 +36,6 @@
 
     .health-info-cards h2 {
         grid-column: 1/4;
+        margin-bottom: var(--small-size);
     }
 }
